{
    "name": "InputActions",
    "maps": [
        {
            "name": "Battle",
            "id": "03b066f8-a97f-4229-a8dc-c6c4dbf09112",
            "actions": [
                {
                    "name": "SelectPrevious",
                    "type": "Button",
                    "id": "842bd22f-11ba-41b2-ae07-94059a78b287",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectNext",
                    "type": "Button",
                    "id": "4a26886f-9a23-4ce5-8548-7dcd7aadeb6b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PerformAbility",
                    "type": "Button",
                    "id": "812e537d-5b72-4ebe-afc3-cfca4cb46862",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d1dc4961-1953-4efe-be25-b9fdd9526b4d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectPrevious",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bba72a7d-cf9f-4a94-8b68-f7d31c8ed5bb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectNext",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c812d983-8089-47d1-b794-f27abe40cd2d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PerformAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PlayerInputs",
            "bindingGroup": "PlayerInputs",
            "devices": []
        }
    ]
}